_site/materials/Treća godina/PPJ/Vežbe/Rokovi/feb2020/parser.output
Grammar

    0 $accept: program $end

    1 program: program naredba ';'
    2        | naredba ';'

    3 naredba: ID '=' izraz
    4        | PRINT '(' izraz ')'

    5 izraz: izraz '+' izraz
    6      | izraz '-' izraz
    7      | izraz '*' izraz
    8      | izraz '/' izraz
    9      | '(' izraz ')'
   10      | '-' izraz
   11      | izraz '.' izraz
   12      | izraz 'x' BROJ
   13      | izraz '[' BROJ ',' BROJ ']'
   14      | STRING
   15      | BROJ
   16      | ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 4 9
    ')' (41) 4 9
    '*' (42) 7
    '+' (43) 5
    ',' (44) 13
    '-' (45) 6 10
    '.' (46) 11
    '/' (47) 8
    ';' (59) 1 2
    '=' (61) 3
    '[' (91) 13
    ']' (93) 13
    'x' (120) 12
    error (256)
    UMINUS (258)
    PRINT (259) 4
    BROJ <v> (260) 12 13 15
    ID <s> (261) 3 16
    STRING <str> (262) 14


Nonterminals, with rules where they appear

    $accept (21)
        on left: 0
    program (22)
        on left: 1 2
        on right: 0 1
    naredba (23)
        on left: 3 4
        on right: 1 2
    izraz <niska> (24)
        on left: 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 3 4 5 6 7 8 9 10 11 12 13


State 0

    0 $accept: • program $end

    PRINT  shift, and go to state 1
    ID     shift, and go to state 2

    program  go to state 3
    naredba  go to state 4


State 1

    4 naredba: PRINT • '(' izraz ')'

    '('  shift, and go to state 5


State 2

    3 naredba: ID • '=' izraz

    '='  shift, and go to state 6


State 3

    0 $accept: program • $end
    1 program: program • naredba ';'

    $end   shift, and go to state 7
    PRINT  shift, and go to state 1
    ID     shift, and go to state 2

    naredba  go to state 8


State 4

    2 program: naredba • ';'

    ';'  shift, and go to state 9


State 5

    4 naredba: PRINT '(' • izraz ')'

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 15


State 6

    3 naredba: ID '=' • izraz

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 16


State 7

    0 $accept: program $end •

    $default  accept


State 8

    1 program: program naredba • ';'

    ';'  shift, and go to state 17


State 9

    2 program: naredba ';' •

    $default  reduce using rule 2 (program)


State 10

   10 izraz: '-' • izraz

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 18


State 11

   15 izraz: BROJ •

    $default  reduce using rule 15 (izraz)


State 12

   16 izraz: ID •

    $default  reduce using rule 16 (izraz)


State 13

   14 izraz: STRING •

    $default  reduce using rule 14 (izraz)


State 14

    9 izraz: '(' • izraz ')'

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 19


State 15

    4 naredba: PRINT '(' izraz • ')'
    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '.'  shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    'x'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '['  shift, and go to state 26
    ')'  shift, and go to state 27


State 16

    3 naredba: ID '=' izraz •
    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '.'  shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    'x'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '['  shift, and go to state 26

    $default  reduce using rule 3 (naredba)


State 17

    1 program: program naredba ';' •

    $default  reduce using rule 1 (program)


State 18

    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
   10      | '-' izraz •
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '['  shift, and go to state 26

    $default  reduce using rule 10 (izraz)


State 19

    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
    9      | '(' izraz • ')'
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '.'  shift, and go to state 20
    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    'x'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '['  shift, and go to state 26
    ')'  shift, and go to state 28


State 20

   11 izraz: izraz '.' • izraz

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 29


State 21

    5 izraz: izraz '+' • izraz

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 30


State 22

    6 izraz: izraz '-' • izraz

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 31


State 23

   12 izraz: izraz 'x' • BROJ

    BROJ  shift, and go to state 32


State 24

    7 izraz: izraz '*' • izraz

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 33


State 25

    8 izraz: izraz '/' • izraz

    '-'     shift, and go to state 10
    BROJ    shift, and go to state 11
    ID      shift, and go to state 12
    STRING  shift, and go to state 13
    '('     shift, and go to state 14

    izraz  go to state 34


State 26

   13 izraz: izraz '[' • BROJ ',' BROJ ']'

    BROJ  shift, and go to state 35


State 27

    4 naredba: PRINT '(' izraz ')' •

    $default  reduce using rule 4 (naredba)


State 28

    9 izraz: '(' izraz ')' •

    $default  reduce using rule 9 (izraz)


State 29

    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
   11      | izraz • '.' izraz
   11      | izraz '.' izraz •
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '+'  shift, and go to state 21
    '-'  shift, and go to state 22
    'x'  shift, and go to state 23
    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '['  shift, and go to state 26

    $default  reduce using rule 11 (izraz)


State 30

    5 izraz: izraz • '+' izraz
    5      | izraz '+' izraz •
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '['  shift, and go to state 26

    $default  reduce using rule 5 (izraz)


State 31

    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    6      | izraz '-' izraz •
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '*'  shift, and go to state 24
    '/'  shift, and go to state 25
    '['  shift, and go to state 26

    $default  reduce using rule 6 (izraz)


State 32

   12 izraz: izraz 'x' BROJ •

    $default  reduce using rule 12 (izraz)


State 33

    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    7      | izraz '*' izraz •
    8      | izraz • '/' izraz
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '['  shift, and go to state 26

    $default  reduce using rule 7 (izraz)


State 34

    5 izraz: izraz • '+' izraz
    6      | izraz • '-' izraz
    7      | izraz • '*' izraz
    8      | izraz • '/' izraz
    8      | izraz '/' izraz •
   11      | izraz • '.' izraz
   12      | izraz • 'x' BROJ
   13      | izraz • '[' BROJ ',' BROJ ']'

    '['  shift, and go to state 26

    $default  reduce using rule 8 (izraz)


State 35

   13 izraz: izraz '[' BROJ • ',' BROJ ']'

    ','  shift, and go to state 36


State 36

   13 izraz: izraz '[' BROJ ',' • BROJ ']'

    BROJ  shift, and go to state 37


State 37

   13 izraz: izraz '[' BROJ ',' BROJ • ']'

    ']'  shift, and go to state 38


State 38

   13 izraz: izraz '[' BROJ ',' BROJ ']' •

    $default  reduce using rule 13 (izraz)
